--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <script>
-      
-    //Generates computers output as R,P, or S randomly as a string
+ 
+    for (i = 0; i < 10; i++) {
     function randomRPSGenerator() {
         var possibleComputerOutputs = ["R", "P", "S"];
         var computersChosenOutput = possibleComputerOutputs[Math.floor(Math.random() * possibleComputerOutputs.length)];
@@ -23,7 +23,7 @@
     console.log(computersOutput)
     //Tie scenario
     if (userInput === computersOutput) {
-        console.log("tie game")
+        alert("tie game")
     } 
     //Win scenarios
     else if ((userInput === "R" && computersOutput === "S")) {
@@ -32,10 +32,12 @@
         console.log("you win")
     } else if ((userInput === "P" && computersOutput === "R")) {
         console.log("you win")
-    //Lose scenarios, if you didn't win you lost lol
+    //Lose scenario
     } else {
         console.log("you lose")
     }
+    }
+
     </script>
 </body>
 </html>
