uppercases the users inputs

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     var computersOutput = randomRPSGenerator()
     console.log(randomRPSGenerator())
     //Prompts the user for an input and records it as a variable
-    var userInput = prompt("R, P, or S?")
+    var userInput = prompt("R, P, or S?").toLocaleUpperCase()
     //Alerts the computers output
     alert("The computer chose " + computersOutput)
     //Tie scenario
