fixes console log messages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     //Sets the output of the random number generator function as a variable
     var computersOutput = randomRPSGenerator()
-    console.log(randomRPSGenerator())
+    console.log(computersOutput)
     //Prompts the user for an input and records it as a variable
     var userInput = prompt("R, P, or S?").toLocaleUpperCase()
     //Alerts the computers output
